--- a/api/build.gradle
+++ b/api/build.gradle
@@ -44,5 +44,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
+    // di
+    implementation 'org.kodein.di:kodein-di-generic-jvm:5.0.1'
+
 
 }
