--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:dist="http://schemas.android.com/apk/distribution"
-          package="com.beebetter.api">
+<manifest
+        xmlns:dist="http://schemas.android.com/apk/distribution"
+        package="com.beebetter.api">
     <dist:module
             dist:onDemand="true"
             dist:instant="false"
